--- a/about.html
+++ b/about.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About — Aetherial Ora</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@700;800&family=Nunito:wght@300;400;600&display=swap" rel="stylesheet" />
+</head>
+<body>
 
+  <header>
+    <div class="container header-content">
+      <div class="logo">
+        <i class="fas fa-seedling logo-icon"></i>
+        <div>
+          <div class="logo-text">AETHERIAL ORA</div>
+          <div class="logo-tagline">Cultivating Innovation, Healing the Planet</div>
+        </div>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+          <li><a href="about.html"><i class="fas fa-eye"></i> About</a></li>
+          <li><a href="sprouts.html"><i class="fas fa-leaf"></i> Sprouts</a></li>
+          <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <section class="about-section">
+    <div class="container">
+      <h2>Our Himalayan-Inspired Vision</h2>
+      <p>At AETHERIAL ORA, we blend cutting-edge AI with the wisdom of nature. Based in the majestic landscapes of Leh, Ladakh, we're committed to sustainability, wellness, and innovation. We begin by selling pure, living sprouts, and dream of transforming food culture—one rooted, wild harvest at a time.</p>
+
+      <ul class="vision-icons">
+        <li><i class="fas fa-mountain"></i> Himalayan Inspired</li>
+        <li><i class="fas fa-recycle"></i> 100% Recyclable</li>
+        <li><i class="fas fa-seedling"></i> Sprout Philosophy</li>
+        <li><i class="fas fa-globe-asia"></i> East Culture</li>
+      </ul>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 AETHERIAL ORA — Rooted in the Himalayas, Sprouting a New World</p>
+    </div>
+  </footer>
+
+</body>
+</html>
