--- a/sprouts.html
+++ b/sprouts.html
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sprouts — Aetherial Ora</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+</head>
+<body>
 
+  <header>
+    <div class="container header-content">
+      <div class="logo">
+        <i class="fas fa-seedling logo-icon"></i>
+        <div>
+          <div class="logo-text">AETHERIAL ORA</div>
+          <div class="logo-tagline">Fresh Starts, Wild Roots</div>
+        </div>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="sprouts.html">Sprouts</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <section class="sprout-grid">
+    <div class="container">
+      <h2>Our Sprouts</h2>
+      <p>Grown in purified Himalayan water. Chemical-free. Alive with nutrition.</p>
+      <div class="grid">
+        <div class="card">
+          <img src="https://placehold.co/300x200?text=Moong+Sprout" alt="Moong Sprout" />
+          <h3>Moong Sprouts</h3>
+          <p>Rich in protein, light, and full of vitality.</p>
+        </div>
+        <div class="card">
+          <img src="https://placehold.co/300x200?text=Chana+Sprout" alt="Chana Sprout" />
+          <h3>Chana Sprouts</h3>
+          <p>Earthy, energizing, and full of fiber.</p>
+        </div>
+        <div class="card">
+          <img src="https://placehold.co/300x200?text=Mixed+Sprouts" alt="Mixed Sprout" />
+          <h3>Mixed Sprouts</h3>
+          <p>A vibrant blend of goodness for everyday immunity.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 AETHERIAL ORA — Sprouting Wellness, Naturally</p>
+    </div>
+  </footer>
+
+</body>
+</html>
