--- a/contract.html
+++ b/contract.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact — Aetherial Ora</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+</head>
+<body>
 
+  <header>
+    <div class="container header-content">
+      <div class="logo">
+        <i class="fas fa-seedling logo-icon"></i>
+        <div>
+          <div class="logo-text">AETHERIAL ORA</div>
+          <div class="logo-tagline">Rooted in Earth, Designed for Tomorrow</div>
+        </div>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="sprouts.html">Sprouts</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <section class="contact">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <p>We’d love to hear from you—whether it’s about sprouts, sustainability, or just to say hello 🌾</p>
+
+      <ul class="contact-list">
+        <li><i class="fas fa-envelope"></i> orafoods@aetherialora.com</li>
+        <li><i class="fas fa-phone-alt"></i> +91 9876 543 210</li>
+        <li><i class="fab fa-instagram"></i> @aetherialora</li>
+      </ul>
+
+      <div class="eco-pledge">
+        <h3>Our Pledge 🌍</h3>
+        <p>Every product we grow is biodegradable, local, and gentle on the planet. Your health is our harvest.</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 AETHERIAL ORA — Rewilding the world, one sprout at a time.</p>
+    </div>
+  </footer>
+
+</body>
+</html>
