--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@700;800&family=Nunito:wght@300;400;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet" />
+
 </head>
 <body>
 
@@ -39,6 +41,54 @@
       <a href="sprouts.html" class="cta-button">Explore Our Suite <i class="fas fa-arrow-right"></i></a>
     </div>
   </section>
+<section class="why-choose">
+  <div class="container">
+    <h2>Why Choose AETHERIAL ORA?</h2>
+    <p class="intro">Our commitment to excellence and sustainability sets us apart</p>
+
+    <ul class="features-list">
+      <li><strong>Eco-Conscious AI:</strong> Our AI models are optimized for minimal energy consumption, reducing carbon footprint while maximizing performance.</li>
+      <li><strong>Kaizen Philosophy:</strong> Continuous improvement is at our core. Our tools evolve daily with user feedback and technological advances.</li>
+      <li><strong>Sustainable Packaging:</strong> 100% biodegradable and recyclable materials that return to the earth, leaving no trace behind.</li>
+      <li><strong>Himalayan Inspired:</strong> Our designs draw inspiration from the resilience and beauty of the Himalayas and Eastern cultures.</li>
+      <li><strong>Planet Healing:</strong> 5% of all profits support reforestation and environmental conservation projects in the Himalayas.</li>
+      <li><strong>Community Focused:</strong> We work directly with Leh communities to create sustainable economic opportunities.</li>
+    </ul>
+  </div>
+</section>
+
+<section class="summary-quote">
+  <div class="container">
+    <h3>AETHERIAL ORA</h3>
+    <p>Harnessing AI for sustainable innovation, inspired by the Himalayas and dedicated to healing our planet.</p>
+  </div>
+</section>
+
+<section class="product-links">
+  <div class="container">
+    <h2>Our Products</h2>
+    <ul class="product-list">
+      <li>Text to Code</li>
+      <li>Video Enhancement</li>
+      <li>Image Enhancement</li>
+      <li>Agri-Analytics</li>
+      <li>Climate Modeling</li>
+    </ul>
+  </div>
+</section>
+
+<section class="quick-links">
+  <div class="container">
+    <h2>Quick Links</h2>
+    <ul class="quick-list">
+      <li>Our Vision</li>
+      <li>Documentation</li>
+      <li>Blog</li>
+      <li>Sustainability Report</li>
+      <li>Partnerships</li>
+    </ul>
+  </div>
+</section>
 
   <footer>
     <div class="container">
