--- a/index.html
+++ b/index.html
@@ -34,13 +34,20 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="hero">
-    <div class="container">
-      <h1>AI Solutions for a Sustainable Future</h1>
-      <p>Harnessing artificial intelligence to empower agriculture, enhance media, and heal our planet. Inspired by the Himalayas, crafted for Earth.</p>
-      <a href="sprouts.html" class="cta-button">Explore Our Suite <i class="fas fa-arrow-right"></i></a>
-    </div>
-  </section>
+ <section class="hero">
+  <div class="container">
+    <h1>The Himalayan Heartbeat: Nature’s Rhythm of Renewal</h1>
+    <p>At the core of Aetherial ORA pulses an ancient wisdom drawn not from circuits, but from the sacred mountains—the eternal Himalayan Heartbeat. This is where nature's timeless rhythms become our guide to continuous growth.</p>
+    <h3 class="subhead">The Eternal Wisdom of Peaks and Valleys</h3>
+    <ul class="wisdom-list">
+      <li><strong>Mountain Patience:</strong> Growth measured in millennia, not milliseconds</li>
+      <li><strong>River Resilience:</strong> Continuous flow shaping stone with gentle persistence</li>
+      <li><strong>Forest Harmony:</strong> Diverse ecosystems thriving through mutual support</li>
+      <li><strong>Glacial Wisdom:</strong> Slow transformation holding immense power</li>
+    </ul>
+  </div>
+</section>
+
 <section class="why-choose">
   <div class="container">
     <h2>Why Choose AETHERIAL ORA?</h2>
