--- a/sprouts.html
+++ b/sprouts.html
@@ -31,25 +31,46 @@
   </header>
 
   <section class="sprout-grid">
-    <div class="container">
-      <h2>Our Sprouts</h2>
-      <p>Grown in purified Himalayan water. Chemical-free. Alive with nutrition.</p>
-      <div class="grid">
-        <div class="card">
-          <img src="https://placehold.co/300x200?text=Moong+Sprout" alt="Moong Sprout" />
-          <h3>Moong Sprouts</h3>
-          <p>Rich in protein, light, and full of vitality.</p>
-        </div>
-        <div class="card">
-          <img src="https://placehold.co/300x200?text=Chana+Sprout" alt="Chana Sprout" />
-          <h3>Chana Sprouts</h3>
-          <p>Earthy, energizing, and full of fiber.</p>
-        </div>
-        <div class="card">
-          <img src="https://placehold.co/300x200?text=Mixed+Sprouts" alt="Mixed Sprout" />
-          <h3>Mixed Sprouts</h3>
-          <p>A vibrant blend of goodness for everyday immunity.</p>
-        </div>
+   
+</div>
+<h2>🌱 Grown in Ladakh. With Heart. With Honor.</h2>
+<p><strong>PURE & SACRED</strong><br>
+Nurtured in Ladakh’s clean air and mindful hands.<br>
+We grow with intention — so you can grow with strength.</p>
+
+<p><em>Fresh. Resilient. Grown with reverence in Ladakh’s high altitudes.</em><br>
+Our sprouts carry mountain purity and your daily strength.</p>
+
+<h3>🤝 Our Promise to You and Earth</h3>
+<ul>
+  <li>Transparent practices. No chemicals. Just clean truth.</li>
+  <li>You’re always welcome to <strong>visit our village</strong> — see how we grow.</li>
+</ul>
+
+<h3>🌏 Planet Healing Legacy</h3>
+<p>Not just food — a seed of change.<br>
+Every jar nourishes body, land, and future.<br>
+<strong>By February 2026 → 100% Plastic-Free Packaging</strong><br>
+Less harm. More healing. One choice at a time.<br>
+Together, we return to the rhythm of Earth.</p>
+
+<h3>🥗 What’s Inside a Jar?</h3>
+<ul>
+  <li><strong>Chana (Chickpea)</strong> — Keeps you full & fueled</li>
+  <li><strong>Moong (Mung Bean)</strong> — High protein, digestion-friendly</li>
+  <li><strong>Barley (Jau)</strong> — Detox aid, heart-nourishing</li>
+  <li><strong>Wheatgrass (Gehu)</strong> — Chlorophyll-rich, cleansing</li>
+  <li><strong>Sunflower Shoots</strong> — Magnesium & Vitamin E</li>
+  <li><strong>Alfalfa</strong> — Bone-supporting, iron-packed</li>
+  <li><strong>Pea Shoots</strong> — Sweet & antioxidant-rich</li>
+</ul>
+
+<p><em>One tablespoon of seeds = a garden of nutrition.</em></p>
+
+<div style="text-align:center; font-size: smaller; margin-top: 12px;">
+  <strong>under the Ora ethos</strong>
+</div>
+
       </div>
     </div>
   </section>
