--- a/about.html
+++ b/about.html
@@ -31,6 +31,12 @@
   </header>
 
   <section class="about-section">
+<div class="qr-box">
+  <h3>📲 Visit Ora from Anywhere</h3>
+  <p>Scan this QR code to view our mobile site and sprout story instantly.</p>
+  <img src="images/ora-qr.png" alt="Ora QR Code" />
+</div>
+
     <div class="container">
       <h2>Our Himalayan-Inspired Vision</h2>
       <p>At AETHERIAL ORA, we blend cutting-edge AI with the wisdom of nature. Based in the majestic landscapes of Leh, Ladakh, we're committed to sustainability, wellness, and innovation. We begin by selling pure, living sprouts, and dream of transforming food culture—one rooted, wild harvest at a time.</p>
