--- a/index.html
+++ b/index.html
@@ -67,7 +67,18 @@
 <section class="summary-quote">
   <div class="container">
     <h3>AETHERIAL ORA</h3>
-    <p>Harnessing AI for sustainable innovation, inspired by the Himalayas and dedicated to healing our planet.</p>
+    <div class="section">
+  <h3>Why This Embodies Your Vision</h3>
+  <ul>
+    <li><strong>Mountain-Pure Origin:</strong> Direct Himalayan connection</li>
+    <li><strong>Village Heart:</strong> “Lung” (Hemis) honors rural cultivation</li>
+    <li><strong>Sacred Cleanliness:</strong> “Dangmé” (purity) as core value</li>
+    <li><strong>Spiritual Nourishment:</strong> Blessing acknowledges food as energy</li>
+    <li><strong>Authentic Craftsmanship:</strong> “Hand-tended” in packaging</li>
+  </ul>
+</div>
+
+    <p>.</p>
   </div>
 </section>
 
