--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
 
 <section class="product-links">
   <div class="container">
-    <h2>Our Products</h2>
-    <ul class="product-list">
-      <li>Text to Code</li>
-      <li>Video Enhancement</li>
-      <li>Image Enhancement</li>
-      <li>Agri-Analytics</li>
-      <li>Climate Modeling</li>
-    </ul>
+   <h3>🌿 Upcoming Offerings</h3>
+<ul class="upcoming-products">
+  <li>🥬 Fresh Vegetables</li>
+  <li>🍞 Khambir (Ladakhi bread)</li>
+  <li>🌵 Aloe Vera</li>
+  <li>🌸 Seasonal Flowers</li>
+  <li>🌿 Wild Foraged Herbs</li>
+</ul>
   </div>
 </section>
 
