--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
    <h3>🌿 Upcoming Offerings</h3>
 <ul class="upcoming-products">
   <li>🥬 Fresh Vegetables</li>
-  <li>🍞 Khambir (Ladakhi bread)</li>
+<li>🍞 <a href="khambir.html">Khambir (Ladakh bread)</a></li>
   <li>🌵 Aloe Vera</li>
   <li>🌸 Seasonal Flowers</li>
   <li>🌿 Wild Foraged Herbs</li>
