--- a/packaging.html
+++ b/packaging.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ora | 100% Plastic-Free Packaging by 2026</title>
+    <title>ora | 100% Plastic-Free pacakaging this Ramadan</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -624,7 +624,7 @@
             <h2 class="section-title">Our North Star</h2>
             <div class="mission-content">
                 <div class="mission-text">
-                    <p>By February 2026, every piece of packaging you touch will be <strong>100% plastic-free</strong>. Not a compromise, not an alternative—a revolution.</p>
+                    <p>By this Ramadan , every piece of packaging you touch will be <strong>100% plastic-free</strong>. Not a compromise, not an alternative—a revolution.</p>
                     <p>Inspired by the pristine landscapes of Leh Ladakh and the spiritual heritage of Hemis, we're creating packaging that honors the earth while delighting the senses.</p>
                     <p>Our commitment extends beyond materials to encompass the entire lifecycle—designing for reuse, composting, and eventual return to the earth without trace.</p>
                     <a href="#" class="btn" style="margin-top: 30px;">Join Our Journey</a>
