--- a/contract.html
+++ b/contract.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact — Aetherial Ora</title>
-  <link rel="stylesheet" href="style.css" />
+
+  <!-- Local CSS -->
+  <link rel="stylesheet" href="assets/css/style.css" />
+
+  <!-- External Fonts and Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@700;800&family=Nunito:wght@300;400;600&display=swap" rel="stylesheet" />
 </head>
 <body>
 
