--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
             --monastic-red: #C62828;
             --cream: #F8F4E9;
         }
-        
+        <div id="menu-toggle">&#9776;</div>
+
+<div id="side-menu">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="khambir.html">Khambir</a>
+  <a href="sprouts.html">Sprouts</a>
+  <a href="contract.html">Contact</a>
+</div>
+
         body {
             font-family: 'Cinzel', serif;
             background: var(--cream);
