--- a/index.html
+++ b/index.html
@@ -173,5 +173,13 @@
         <p>&copy; Aetherial Ora • <span class="tibetan">༄༅། །ལ་དྭགས་ཀྱི་སེམས་ཁོར་ཡུག</span></p>
         <p><a href="#">Contact</a> | <span class="tibetan">༄༅། །ཁོར་ཡུག་གི་ཆོས་ལུགས།</span> (Earth Ethics) | Impact Report</p>
     </footer>
+<script>
+  const toggle = document.getElementById('menu-toggle');
+  const menu = document.getElementById('side-menu');
+
+  toggle.addEventListener('click', () => {
+    menu.style.left = (menu.style.left === '0px') ? '-250px' : '0px';
+  });
+</script>
 </body>
 </html>
