--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <h2 class="tibetan">༄༅། །ཐུགས་བཅངས་བྱས་པས་སྤྱན་རས་གཟིགས།</h2>
         <h2>Welcome to Aetherial Ora</h2>
         <p><em>"Zero Impact. Infinite Reverence."</em></p>
-       <p>Born in the shadow of highland echoes of <strong>Stok Palace</strong>—where ancient Himalayan cosmology entwines with the raw wildness of Ladakh—we fuse timeless Bön and Vajrayana insight with modern zero-waste science.</p>
+       <p>Born in the shadow of highland echoes of <strong>himalayan mountain</strong>—where ancient Himalayan cosmology entwines with the raw wildness of Ladakh—we fuse timeless Bön and Vajrayana insight with modern zero-waste science.</p>
 <p class="tibetan">༄༅། །སྐྱེ་ཁམས་སྐྱོང་བའི་ལས་རྣམ།</p>
         <p><strong>"Save the Biosphere, Save the World."</strong></p>
     </section>
@@ -145,7 +145,7 @@
             <h3 class="tibetan">༄༅། །བེད་སྤྱོད་ཡོད་པའི་དངོས་པོ།</h3>
             <h3>1. Reusable & Earth-Friendly</h3>
             <ul>
-                <li><span class="tibetan">༄༅། །ཤིང་སྒོར་གྱི་ལག་བཟོ།</span> - Ladakhi wooden utensils (Hand-carved in Hemis village)</li>
+                <li><span class="tibetan">༄༅། །ཤིང་སྒོར་གྱི་ལག་བཟོ།</span> - Ladakhi wooden utensils (Hand-carved in Hemis side vally)</li>
                 <li><span class="tibetan">༄༅། །འཁོར་བ་མེད་པའི་སྤྲོས་བ།</span> - Closed-loop systems (Like Hemis' monastic waste-free kitchens)</li>
             </ul>
         </div>
