--- a/sprouts.html
+++ b/sprouts.html
@@ -587,25 +587,24 @@
             &copy; 2023 Pure Valley Mountain Sprouts • Ladakh-Grown • Hand-Tended • Solar-Washed • Wind-Blessed
         </div>
     </footer>
-<!-- 🌱 Hamburger Menu Toggle -->
-<div id="menu-toggle">&#9776;</div>
+<!-- 🌿 Sprouts Mini Menu Toggle -->
+<div id="sprouts-menu-toggle">&#9776;</div>
 
-<!-- 🌿 Slide-In Menu -->
-<div id="side-menu">
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
+<!-- 🌾 Sprouts-Focused Sidebar -->
+<div id="sprouts-submenu">
+  <a href="sprouts.html">Sprouts Overview</a>
+  <a href="nutration.html">Nutration</a>
+  <a href="packaging.html">Packaging</a>
   <a href="khambir.html">Khambir</a>
-  <a href="sprouts.html">Sprouts</a>
-  <a href="contract.html">Contact</a>
 </div>
 
-<!-- 🍃 Slide Toggle Script -->
+<!-- 🍃 Sprouts Menu Script -->
 <script>
-  const toggle = document.getElementById('menu-toggle');
-  const menu = document.getElementById('side-menu');
+  const toggle = document.getElementById('sprouts-menu-toggle');
+  const menu = document.getElementById('sprouts-submenu');
   toggle.addEventListener('click', () => {
-    menu.style.left = (menu.style.left === '0px') ? '-250px' : '0px';
+    menu.style.left = (menu.style.left === '0px') ? '-220px' : '0px';
   });
-</script>  
+</script>
 </body>
 </html>
