remove duplicate menu

--- a/sprouts.html
+++ b/sprouts.html
@@ -8,26 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Tibetan:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
-
-  <!-- 🌱 Sprouts Menu Button -->
-  <button id="sprouts-toggle" aria-label="Open Menu">
-    <span class="bar"></span>
-    <span class="bar"></span>
-    <span class="bar"></span>
-  </button>
-
-  <!-- 🌿 Sprouts Sidebar Menu -->
-  <div id="sprouts-submenu">
-    <a href="sprouts.html">Sprouts Overview</a>
-    <a href="nutration.html">Nutration</a>
-    <a href="packaging.html">Packaging</a>
-    <a href="khambir.html">Khambir</a>
-  </div>
-
-  <!-- 🌒 Gray Background Overlay -->
-  <div id="menu-overlay"></div>
-
+</body>
         body {
             background: linear-gradient(to bottom, #f8f9fa, #e9ecef);
             color: #333;
