Added Font Awesome CDN before Google Fonts to enable hamburger menu icon display.

--- a/sprouts.html
+++ b/sprouts.html
@@ -6,6 +6,8 @@
     <title>Pure Valley Mountain Sprouts - Ladakh's Natural Gift</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <style>
         * {
             margin: 0;
