--- a/sprouts.html
+++ b/sprouts.html
@@ -6,8 +6,10 @@
     <title>Pure Valley Mountain Sprouts - Ladakh's Natural Gift</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
-    
-    <style>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   <head>
+   <style>
         * {
             margin: 0;
             padding: 0;
@@ -25,6 +27,8 @@
         }
         
          {
+
+<body>
   <nav class="navbar">
     <div class="menu-toggle" onclick="toggleMenu()">
       <i class="fas fa-bars"></i>
@@ -36,8 +40,6 @@
       <li><a href="updates.html" onclick="toggleMenu()">Updates</a></li>
     </ul>
   </nav>
-
-            <body>
 
   <!-- Your existing content continues here -->
             font-family: 'Montserrat', sans-serif;
