update nutratio.htmlhey check all

--- a/sprouts.html
+++ b/sprouts.html
@@ -22,7 +22,7 @@
   <ul class="menu" id="menu">
     <li><a href="sprouts.html">🌱 Sprouts</a></li>
     <li><a href="packaging.html">📦 Packaging</a></li>
-    <li><a href="nutrition.html">🥗 Nutrition</a></li>
+    <li><a href="nutration.html">🥗 Nutrition</a></li>
     <li><a href="khambir.html">🍞 Khambir</a></li>
     <li><a href="updates.html">📝 Updates</a></li>
   </ul>
