🔗 Add working Home link to sprouts.html for seamless navigation to Aetherial Ora homepage

--- a/sprouts.html
+++ b/sprouts.html
@@ -20,6 +20,7 @@
   </nav>
 
   <ul class="menu" id="menu">
+    <a href="index.html">🏡 Home</a>
     <li><a href="sprouts.html">🌱 Sprouts</a></li>
     <li><a href="packaging.html">📦 Packaging</a></li>
     <li><a href="nutration.html">🥗 Nutration</a></li>
