Added hero section with Aetherial Aura banner and background styling to khambir.html

--- a/khambir.html
+++ b/khambir.html
@@ -6,6 +6,11 @@
   <title>Khambir – Aetherial ORA</title>
  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
+<section class="hero-section">
+  <h1>Aetherial Aura</h1>
+  <!-- Optional: <p>Your tagline here</p> -->
+</section>
+
 <body>
 
   <section class="khambir-hero">
