--- a/sprouts.html
+++ b/sprouts.html
@@ -23,7 +23,7 @@
     <a href="index.html">🏡 Home</a>
     <li><a href="sprouts.html">🌱 Sprouts</a></li>
     <li><a href="packaging.html">📦 Packaging</a></li>
-    <li><a href="nutration.html">🥗 Nutration</a></li>
+    <li><a href="nutrition.html">🥗 Nutrition</a></li>
     <li><a href="khambir.html">🍞 Khambir</a></li>
     <li><a href="updates.html">📝 Updates</a></li>
   </ul>
