Update menu in sprouts.html

--- a/sprouts.html
+++ b/sprouts.html
@@ -24,7 +24,7 @@
     <li><a href="sprouts.html">🌱 Sprouts</a></li>
     <li><a href="packaging.html">📦 Packaging</a></li>
     <li><a href="nutrition.html">🥗 Nutrition</a></li>
-    <li><a href="khambir.html">🍞 Khambir</a></li>
+    <li><a href="effect.html">🍞 effect</a></li>
     <li><a href="updates.html">📝 Updates</a></li>
   </ul>
 
