--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div id="side-menu">
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
-  <a href="khambir.html">Khambir</a>
+  <a href="upcoming.html">upcoming</a>
   <a href="sprouts.html">Sprouts</a>
   <a href="contract.html">Contact</a>
 </div>
@@ -103,7 +103,7 @@
    <nav>
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
-  <a href="khambir.html">Khambir</a>
+  <a href="upcoming.html">upcoming</a>
   <a href="sprouts.html">Sprouts</a>
   <a href="contract.html">Contact</a>
 </nav>
